# rollback-rs

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md  rustfmt.toml
.github/workflows/: ci.yml
.zed/: settings.json
examples/: p2p_demo.rs
src/: error.rs  lib.rs  state.rs  sync.rs  tests.rs
src/network/: mod.rs  packet.rs  peer.rs  session.rs  transport.rs
tests/: rollback_state_proptest.rs
